--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "cd dist && http-server"
+    "start": "cd example && http-server"
   },
   "keywords": [
     "Webpack",
