--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "cd example && http-server"
+    "start": "http-server"
   },
   "keywords": [
     "Webpack",
@@ -16,9 +16,7 @@
     "d3"
   ],
   "dependencies": {
-    "http-server": "^0.11.1",
-    "mobx": "^4.0.1",
-    "webpack": "^4.2.0"
+    "mobx": "^4.0.1"
   },
   "devDependencies": {
     "babel-loader": "^7.1.3",
@@ -26,7 +24,8 @@
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "ts-loader": "^4.0.1",
+    "http-server": "^0.11.1",
+    "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   },
   "author": "Sanjay Mahto",
