--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "d3"
   ],
   "dependencies": {
-    "mobx": "^4.0.1"
+    "http-server": "^0.11.1"
   },
   "devDependencies": {
+    "mobx": "^4.0.1",
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "http-server": "^0.11.1",
     "webpack": "^4.3.0",
     "webpack-cli": "^2.0.13"
   },
