--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "lint": "eslint ./src",
     "start": "http-server"
   },
   "keywords": [
@@ -16,10 +17,12 @@
     "d3"
   ],
   "dependencies": {
-    "http-server": "^0.11.1"
+    "d3": "^5.0.0",
+    "mobx": "^4.0.1",
+    "mobx-store": "^3.4.0"
   },
   "devDependencies": {
-    "mobx": "^4.0.1",
+    "http-server": "^0.11.1",
     "babel-loader": "^7.1.3",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.19.0",
